--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -6,14 +6,14 @@
     <meta
       http-equiv="Content-Security-Policy"
       content="
-        connect-src https: file: ipc: socket: ws://localhost:*;
-        script-src https: socket: http://localhost:* 'unsafe-eval';
-        script-src-elem https: socket: http://localhost:* 'unsafe-eval';
-        img-src https: data: file: http://localhost:* socket:;
-        child-src 'none';
-        object-src 'none';
-      "
-    >
+      connect-src https: file: ipc: socket: ws://localhost:*;
+      script-src https: socket: http://localhost:* 'unsafe-eval';
+      script-src-elem https: socket: http://localhost:* 'unsafe-eval';
+      img-src https: data: file: http://localhost:* socket:;
+      child-src 'none';
+      object-src 'none';
+    "
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React + TS</title>
   </head>
